[gd_scene load_steps=16 format=3]

[ext_resource type="Script" path="res://entities/player/player.gd" id="1_script"]
[ext_resource type="Texture2D" uid="uid://d4fo1j8wox2f5" path="res://Characters(100x100)/Soldier/Soldier/Soldier-Idle.png" id="2_sprite"]
[ext_resource type="Texture2D" path="res://Characters(100x100)/Soldier/Soldier/Shadow sprites/Soldier-Shadow_attack2.png" id="2_shadow"]
[ext_resource type="Texture2D" path="res://Characters(100x100)/Soldier/Soldier/Soldier-Walk.png" id="3_walk"]
[ext_resource type="Texture2D" path="res://Characters(100x100)/Soldier/Soldier/Soldier-Attack01.png" id="4_attack"]
[ext_resource type="Texture2D" path="res://Characters(100x100)/Soldier/Soldier(Split Effects)/Soldier-Attack01_Effect.png" id="4_effect"]
[ext_resource type="Texture2D" path="res://Characters(100x100)/Soldier/Soldier/Soldier-Hurt.png" id="4_hurt"]
[ext_resource type="Texture2D" path="res://Characters(100x100)/Soldier/Soldier/Soldier-Death.png" id="5_death"]
[ext_resource type="Script" path="res://components/fsm/state_machine.gd" id="5_fsm"]
[ext_resource type="Script" path="res://entities/player/states/player_idle.gd" id="6_idle"]
[ext_resource type="Script" path="res://entities/player/states/player_walk.gd" id="7_walk"]
[ext_resource type="Script" path="res://entities/player/states/player_attack.gd" id="8_attack"]
[ext_resource type="Script" path="res://entities/player/states/player_follow.gd" id="9_follow"]
[ext_resource type="Script" path="res://entities/player/states/player_downed.gd" id="10_downed"]
[ext_resource type="Script" path="res://components/velocity_component.gd" id="9_velocity"]
[ext_resource type="Script" path="res://components/health_component.gd" id="10_health"]
[ext_resource type="Script" path="res://components/hurtbox_component.gd" id="11_hurtbox"]
[ext_resource type="Script" path="res://components/hitbox_component.gd" id="12_hitbox"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_player"]
radius = 6.0
height = 16.0


[sub_resource type="Animation" id="Animation_idle"]
resource_name = "idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_sprite")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_walk"]
resource_name = "walk"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_walk")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_attack"]
resource_name = "attack"
length = 0.6
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_attack")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HitboxComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("EffectSprite2D:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("EffectSprite2D:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_hurt"]
resource_name = "hurt"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("4_hurt")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_death"]
resource_name = "death"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("5_death")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_player"]
_data = {
"idle": SubResource("Animation_idle"),
"walk": SubResource("Animation_walk"),
"attack": SubResource("Animation_attack"),
"hurt": SubResource("Animation_hurt"),
"death": SubResource("Animation_death")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_hurtbox"]
radius = 7.0
height = 18.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hitbox"]
radius = 14.0

[sub_resource type="CircleShape2D" id="CircleShape2D_interaction"]
radius = 30.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_script")

[node name="ShadowSprite2D" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("2_shadow")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_sprite")
hframes = 6

[node name="EffectSprite2D" type="Sprite2D" parent="."]
visible = false
texture = ExtResource("4_effect")
hframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_player")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_player")
}

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("5_fsm")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_idle")

[node name="Walk" type="Node" parent="StateMachine"]
script = ExtResource("7_walk")

[node name="Attack" type="Node" parent="StateMachine"]
script = ExtResource("8_attack")

[node name="Follow" type="Node" parent="StateMachine"]
script = ExtResource("9_follow")

[node name="Downed" type="Node" parent="StateMachine"]
script = ExtResource("10_downed")

[node name="VelocityComponent" type="Node" parent="."]
script = ExtResource("9_velocity")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("10_health")

[node name="HurtboxComponent" type="Area2D" parent="." node_paths=PackedStringArray("health_component", "velocity_component")]
script = ExtResource("11_hurtbox")
health_component = NodePath("../HealthComponent")
velocity_component = NodePath("../VelocityComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CapsuleShape2D_hurtbox")
debug_color = Color(0.960784, 0, 0.517647, 0.419608)

[node name="HitboxComponent" type="Area2D" parent="."]
script = ExtResource("12_hitbox")
damage = 10.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitboxComponent"]
position = Vector2(10, 0)
shape = SubResource("CircleShape2D_hitbox")
disabled = true
debug_color = Color(0.701961, 0, 0.0313726, 0.419608)

[node name="InteractionArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="InteractionArea"]
shape = SubResource("CircleShape2D_interaction")
debug_color = Color(0, 0.639216, 0.364706, 0.419608)
